# ai110-module1show-gameglitchinvestigator-starter

./: .gitignore  CHANGELOG.md  README.md  ai_interactions.md  app.py  logic_utils.py  pyproject.toml  reflection.md
.agents/: AGENTS.md
.agents/skills/github-pr-comments/: SKILL.md
.agents/skills/pr-feedback-guardrails/: SKILL.md
.github/workflows/: test.yml  trunk-check.yml
.trunk/: trunk.yaml
docs/: branch-protection.md  issues-and-graphite.md  labels-and-board.md
docs/decisions/: 20260622-ci-pipeline.md  20260622-use-trunk-io.md  20260622-use-uv.md  20260623-use-apptest.md  20260623-use-pytest-bdd.md  README.md  template.md
tests/: conftest.py  test_app_simulation.py  test_game_logic.py
tests/features/: difficulty_range.feature  guess_history_chart.feature  hint_messages.feature  type_juggling.feature
tests/step_defs/: test_difficulty_ranges.py  test_guess_history_chart.py  test_hint_messages.py  test_type_juggling.py
