[project]
name = "ai110-module1show-gameglitchinvestigator-starter"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = ["altair<5", "streamlit>=1.21.0"]

[dependency-groups]
dev = ["pytest>=9.1.1", "pytest-bdd>=8.1.0"]

[tool.pytest.ini_options]
pythonpath = "."
